[package]
name = "amber"
version = "0.4.1-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/amber"
keywords = ["search", "replace"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A code search and replace tool"

[badges]
travis-ci = { repository = "dalance/amber" }
appveyor  = { repository = "dalance/amber", branch = "master", service = "github" }
codecov   = { repository = "dalance/amber", branch = "master", service = "github" }

[[bin]]
name = "ambr"
path = "src/ambr.rs"

[[bin]]
name = "ambs"
path = "src/ambs.rs"

[features]
sse = []
statistics = []

[dependencies]
crossbeam-channel = "0.1.2"
ctrlc             = "2.0.0"
glob              = "0.2.11"
lazy_static       = "1.0.0"
memmap            = "0.2.3"
num_cpus          = "0.2.10"
regex             = "0.1.47"
rand              = "0.3.13"
rlibc             = "1.0.0"
rustc-serialize   = "0.3.16"
scoped_threadpool = "0.1.6"
structopt         = "0.2.5"
tempfile          = "2.0.1"
term              = "0.4.4"
time              = "0.1.34"

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
