[package]
name = "amber"
version = "0.4.4"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/amber"
keywords = ["search", "replace"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A code search and replace tool"

[badges]
travis-ci = { repository = "dalance/amber" }
appveyor  = { repository = "dalance/amber", branch = "master", service = "github" }
codecov   = { repository = "dalance/amber", branch = "master", service = "github" }

[[bin]]
name = "ambr"
path = "src/ambr.rs"

[[bin]]
name = "ambs"
path = "src/ambs.rs"

[features]
sse = []
statistics = []

[dependencies]
crossbeam-channel = "0.1.2"
ctrlc             = "3.1.0"
glob              = "0.2.11"
lazy_static       = "1.0.0"
memmap            = "0.6.2"
num_cpus          = "1.8.0"
regex             = "1.0.0"
rand              = "0.4.2"
rlibc             = "1.0.0"
rustc-serialize   = "0.3.24"
scoped_threadpool = "0.1.9"
structopt         = "0.2.8"
tempfile          = "3.0.2"
term              = "0.5.1"
time              = "0.1.40"

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
