[package]
name = "amber"
version = "0.6.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/amber"
keywords = ["search", "replace"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
description = "A code search and replace tool"
edition = "2021"

[badges]
travis-ci = { repository = "dalance/amber" }
appveyor  = { repository = "dalance/amber", branch = "master", service = "github" }
codecov   = { repository = "dalance/amber", branch = "master", service = "github" }

[[bin]]
name = "ambr"
path = "src/ambr.rs"

[[bin]]
name = "ambs"
path = "src/ambs.rs"

[features]
sse = []
statistics = []

[dependencies]
crossbeam     = "0.8"
ctrlc         = "3"
directories   = "6.0.0"
filetime      = "0.2"
getch         = "0.3"
glob          = "0.3"
ignore        = "0.4"
lazy_static   = "1"
memmap        = "0.7"
num_cpus      = "1"
regex         = "1"
rand          = "0.9"
rlibc         = "1"
serde         = {version = "1.0", features = ["derive"]}
structopt     = "0.3"
tempfile      = "3"
term          = "1.2"
time          = "0.3"
toml          = "0.9"
unicode-width = "0.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
termios           = "0.3"

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
